# caseless

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
caseless/: __init__.py
tests/: test_caselessdict.py
